<?xml version="1.0"?>
<package format="2">
  <name>reach_msgs</name>
  <version>0.0.0</version>
  <description>The reach_msgs package</description>

  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <author email="michael.ripperger@swri.org">mripperger</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
