<package format="3">
  <name>reach_msgs</name>
  <version>0.0.0</version>
  <description>The reach_msgs package</description>

  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <author email="michael.ripperger@swri.org">mripperger</author>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ros-industrial/reach</url>
  <url type="bugtracker">https://github.com/ros-industrial/reach/issues</url>
  <url type="repository">https://github.com/ros-industrial/reach/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
