<?xml version="1.0"?>
<package format="2">
  <name>reach_msgs</name>
  <version>0.2.1</version>
  <description>The reach_msgs package</description>

  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <author email="michael.ripperger@swri.org">mripperger</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
